fixed carousel controls on IE8

--- a/app/assets/stylesheets/sections/space/_photos.scss
+++ b/app/assets/stylesheets/sections/space/_photos.scss
@@ -63,7 +63,7 @@
       font-size: 22px;
       top: 50%;
       width: 26px;
-      height: 22px;
+      height: auto;
     }
 
     .carousel-caption {
